# f4pga-arch-defs

./: .gitmodules  .travis.yml  CMakeLists.txt  conda_lock.yml  environment.yml  requirements.txt
quicklogic/: CMakeLists.txt  passthrough.eblif
quicklogic/common/cmake/: CMakeLists.txt  install.cmake  post_pnr_equivalence_test.cmake  quicklogic_board.cmake  quicklogic_device.cmake  quicklogic_install.cmake  quicklogic_jlink.cmake  quicklogic_openocd.cmake  quicklogic_qlf_arch.cmake  quicklogic_qlf_device.cmake  quicklogic_toolchain_test.cmake  run_toolchain_test.cmake
quicklogic/common/toolchain_wrappers/: conda_build_install_package.sh  ql_symbiflow  symbiflow_analysis  symbiflow_fasm2bels  symbiflow_generate_bitstream  symbiflow_generate_constraints  symbiflow_pack  symbiflow_route  symbiflow_synth  symbiflow_write_fasm2bels
quicklogic/common/utils/: CMakeLists.txt  create_lib.py  fixup_io_names.py  process_sdc_constraints.py  routing_import.py
quicklogic/common/utils/qlf_fasm2bels/: cluster_decoder.py  netlist.py  placement.py  qlf-fasm2bels.py  routing_decoder.py  routing_mux.py  tile_grid.py
quicklogic/common/utils/repacker/: arch_xml_utils.py  packed_netlist.py  pb_rr_graph.py  pb_rr_graph_netlist.py  pb_rr_graph_router.py  pb_type.py  repack.py
quicklogic/pp3/: CMakeLists.txt  boards.cmake  part_names.cmake  ql-eos-s3-bels.json
quicklogic/pp3/primitives/bidir/: bidir.pb_type.xml  bidir.sim.v  bidir_cell.model.xml  bidir_cell.pb_type.xml  bidir_cell.sim.v
quicklogic/pp3/primitives/gmux/: gmux.sim.v
quicklogic/pp3/primitives/logic/: CMakeLists.txt  c_frag_modes.sim.v  logic.sim.v  q_frag_modes.sim.v
quicklogic/pp3/primitives/ram/: make_rams.py
quicklogic/pp3/primitives/sdiomux/: sdiomux.sim.v
quicklogic/pp3/primitives/syn_pad/: syn_pad.sim.v
quicklogic/pp3/techmap/: cells_map.v
quicklogic/pp3/tests/: CMakeLists.txt
quicklogic/pp3/tests/bram/: CMakeLists.txt  bram.v  chandalar.pcf  jimbob4.pcf
quicklogic/pp3/tests/btn_counter/: CMakeLists.txt  jimbob4.pcf
quicklogic/pp3/tests/btn_ff/: CMakeLists.txt
quicklogic/pp3/tests/btn_xor/: CMakeLists.txt
quicklogic/pp3/tests/consts/: CMakeLists.txt
quicklogic/pp3/tests/counter/: CMakeLists.txt
quicklogic/pp3/tests/design_flow/: CMakeLists.txt
quicklogic/pp3/tests/ext_counter/: CMakeLists.txt
quicklogic/pp3/tests/ext_mult/: CMakeLists.txt
quicklogic/pp3/tests/features/: CMakeLists.txt
quicklogic/pp3/tests/gclk_counter/: CMakeLists.txt  chandalar.pcf
quicklogic/pp3/tests/lut/: CMakeLists.txt
quicklogic/pp3/tests/mult/: CMakeLists.txt  chandalar.pcf
quicklogic/pp3/tests/ram/: CMakeLists.txt  chandalar.pcf
quicklogic/pp3/tests/sdiomux_counter/: chandalar.pcf
quicklogic/pp3/tests/sdiomux_xor/: CMakeLists.txt
quicklogic/pp3/tests/soc_clocks/: CMakeLists.txt  quickfeather.pcf
quicklogic/pp3/tests/soc_litex_pwm/: CMakeLists.txt
quicklogic/pp3/tests/wire/: CMakeLists.txt
quicklogic/pp3/utils/: assp_split_rules.json  create_default_fasm.py  create_ioplace.py  create_place_constraints.py  data_import.py  eos_s3_iomux_config.py  fasm2bels.py  iomux_config.py  prepare_vpr_database.py  routing_import.py  switchbox_model.py  switchbox_router.py  tile_import.py  timing.py  verilogmodule.py
quicklogic/pp3/utils/fasm2bels/: fasm2bels.py  netlist.py
quicklogic/pp3/yosys/: pack.tcl  synth.tcl
quicklogic/qlf_k4n8/: CMakeLists.txt
quicklogic/qlf_k4n8/devices/umc22/: CMakeLists.txt
quicklogic/qlf_k4n8/techmap/: cells_sim.v
quicklogic/qlf_k4n8/tests/: CMakeLists.txt
quicklogic/qlf_k4n8/tests/counter_16bit/: counter_16bit.v
quicklogic/qlf_k4n8/tests/features/: CMakeLists.txt
quicklogic/qlf_k4n8/tests/synth_flow/: CMakeLists.txt
quicklogic/qlf_k4n8/utils/: create_ioplace.py  fixup_io_names.py
quicklogic/qlf_k4n8/utils/repacker/: netlist_cleaning.py  repack.py
quicklogic/qlf_k4n8/yosys/: fixup_port_indices.v  post_pnr_equiv.tcl  synth.tcl
quicklogic/qlf_k6n10/tests/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/design_flow/: CMakeLists.txt
quicklogic/qlf_k6n10/tests/features/: CMakeLists.txt
xc/: CMakeLists.txt
xc/common/cmake/: arch_define.cmake  install.cmake  project_ray.cmake
xc/common/primitives/: CMakeLists.txt
xc/common/primitives/gtpe2_channel/: CMakeLists.txt  gtpe2_channel.pre_built.pb_type.xml
xc/common/primitives/gtpe2_common/: CMakeLists.txt  gtpe2_common.model.xml  gtpe2_common.pre_built.pb_type.xml
xc/common/primitives/ibufds_gte2/: CMakeLists.txt  ibufds_gte2.model.xml  ibufds_gte2.pb_type.xml  ibufds_gte2_n.model.xml  ibufds_gte2_n.pb_type.xml  ibufds_gte2_n_prim.model.xml  ibufds_gte2_n_prim.pb_type.xml  ibufds_gte2_p.pb_type.xml  ibufds_gte2_p_prim.model.xml  ibufds_gte2_p_prim.pb_type.xml
xc/common/primitives/ibufds_gte2_n/: CMakeLists.txt  ibufds_gte2_n.model.xml  ibufds_gte2_n.pb_type.xml  ibufds_gte2_n_prim.model.xml  ibufds_gte2_n_prim.pb_type.xml
xc/common/primitives/ibufds_gte2_p/: CMakeLists.txt  ibufds_gte2_p.model.xml  ibufds_gte2_p.pb_type.xml  ibufds_gte2_p_prim.model.xml
xc/common/primitives/ipad/: ipad.model.xml  ipad.pb_type.xml
xc/common/primitives/pcie_2_1/: CMakeLists.txt
xc/common/utils/: prjxray_arch_import.py  prjxray_create_ioplace.py  prjxray_create_pinmap_csv.py  prjxray_create_place_constraints.py  prjxray_import_tile_capacity.py  prjxray_tile_import.py
xc/xc7/: CMakeLists.txt  bels.json
xc/xc7/techmap/: CMakeLists.txt  cells_map.v  cells_sim.v
xc/xc7/tests/: CMakeLists.txt
xc/xc7/tests/bram_shifter/: bram_shifter_18.v  bram_shifter_36.v
xc/xc7/tests/bufgce/: bufgce_nexys_video.v
xc/xc7/tests/bufgmux/: bufgmux.v
xc/xc7/tests/buttons/: buttons_arty_overlay.v  buttons_basys3.v  buttons_basys3_full.v  buttons_nexys_video.v  buttons_pynqz1.v  buttons_zedboard.v  buttons_zybo.v
xc/xc7/tests/carry/: carry.v
xc/xc7/tests/chain_packing/: counter.v
xc/xc7/tests/common/: CMakeLists.txt  basys3_gtp_common.pcf  basys3_pcie.pcf  error_output_logic.v  error_output_logic_tb.v  error_output_logic_unt.v  ram_shifter.v  ram_test.v  rom_test.v
xc/xc7/tests/counter/: counter.v  (+11 more)
xc/xc7/yosys/: synth.tcl
(+353 files in other folders)
